added stuffs idk

--- a/index.html
+++ b/index.html
@@ -1,14 +1,96 @@
 <!DOCTYPE html>
 
+<!-- Written by hand, some are inspirations taken from online sources! -->
+
 <html>
 
 	<head>
-		<title>Placeholder</title>
+		<!-- Title -->
+		<title>Emily &#40; 상민 &#47; Sang Min &#41;&#39;s Website</title>
+		<!-- Meta -->
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+		<!-- Cascading Style Sheets -->
+		<link rel="stylesheet" href="./mainstyle.css">
+		<!-- Open Graph -->
+		<meta property="og:title" content="Emily ( 상민/Sang Min )">
+		<meta property="og:type" content="website">
+		<meta property="og:image" content="https://emily.lgbt/images/thumbnail/1200x630.png">
+		<meta property="og:url" content="https://emily.lgbt">
+		<meta property="og:description" content="Website about Emily aka Sang Min">
+		<meta property="og:image:type" content="image/png">
+		<meta property="og:image:width" content="1200">
+		<meta property="og:image:height" content="630">
+		<meta property="og:image:alt" content="Thumbnail Image">
+		<meta property="og:locale" content="en_GB">
+		<meta property="og:locale:alternate" content="en_US">
+		<!-- Favicons -->
+		<link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/images/favicons/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/images/favicons/favicon-16x16.png">
+		<!-- Manifest -->
+		<link rel="manifest" href="/site.webmanifest">
 	</head>
 
 	<body>
-		
-		<p>Will fill it soon</p>
+
+		<!-- Main Content Start -->
+		<div id="background-div">
+
+			<!-- Navbar Start -->
+			<div id="navbar-top">
+				<div id="navbar-top-flex-container">
+					<div>
+						<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="button">Placeholder&#44; Currently is a RickRoll&#46;</a>
+					</div>
+				</div>
+			</div>
+			<!-- Navbar End -->
+
+			<!-- Main Content Start -->
+			<div id="content-flex-container">
+				<div id="content1" class="contents">
+					<h1 id="hello">Hai, I&#39;m Emily&#44; formerly known as Sang Min! &#58;3</h1>
+				</div>
+				<div id="content2" class="contents">
+					Lorem ipsum dolor sit amet nisi do sunt ex aliquip. Irure voluptate id consequat ex irure laborum sint nostrud nisi reprehenderit exercitation lorem qui. Elit laboris est commodo magna ad veniam cillum do. Cillum dolor magna do sunt consectetur veniam ut cillum sit ullamco. Laborum officia occaecat culpa ullamco nostrud et veniam nulla aliquip officia.
+				</div>
+				<div id="content3" class="contents">
+					Proident id ullamco minim excepteur aute id ad esse sint. Ullamco veniam anim sunt officia adipiscing sint voluptate non dolor occaecat lorem cillum non sint. Eiusmod laboris dolore dolore laborum aliquip esse elit irure lorem. Voluptate exercitation proident qui enim dolor tempor qui anim duis aute do excepteur eiusmod.
+				</div>
+				<div id="content4" class="contents">
+					Aliquip consequat anim sed laborum nisi incididunt proident enim magna. Laboris eiusmod aute lorem incididunt laboris officia aliquip. Labore aute pariatur non enim do culpa ea magna culpa reprehenderit ad laborum incididunt. Amet excepteur tempor excepteur ut ad duis quis incididunt velit in qui commodo magna.
+				</div>
+				<div id="construction" class="contents">
+					<p id="underconstruction">
+						Website is currently being built&#44; contents are subject to change&#33;
+						<br>
+						<br>
+						Made entirely by hand&#44; used references from internet but no external programs &#40;including LLMs&#41; outside of text editor was used&#46;
+					</p>
+				</div>				
+			</div>
+			<!-- Main Content End -->
+
+		</div>
+		<!-- Main Content End -->
+
+		<!-- Animation Start -->
+		<div class="areaofanims" >
+            <ul class="floatythings">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+            </ul>
+    	</div >
+    	<!-- Animation End -->
 
 	</body>
 </html>
